update (upload video in froala) exist bug - upgrade EntityDefaultPropertiesServiceUtils.java - upgrade uploadImage in froala - ...
