# src/main/java/org/regitiny/minhshop/web/api/open/impl/VideoApiDelegateImpl.java
@@ -1,7 +1,9 @@
 package org.regitiny.minhshop.web.api.open.impl;
 
 import io.vavr.control.Try;
+import lombok.extern.log4j.Log4j2;
 import lombok.extern.slf4j.Slf4j;
+import org.regitiny.minhshop.domain.File;
 import org.regitiny.minhshop.security.AuthoritiesConstants;
 import org.regitiny.minhshop.security.SecurityUtils;
 import org.regitiny.minhshop.service.FileService;
@@ -11,12 +13,16 @@ import org.regitiny.minhshop.service.dto.FileDTO;
 import org.regitiny.minhshop.web.api.open.FileApiDelegate;
 import org.regitiny.minhshop.web.api.open.VideoApiDelegate;
 import org.regitiny.tools.magic.exception.NhechException;
+import org.springframework.cache.annotation.CachePut;
 import org.springframework.core.io.support.ResourceRegion;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
 import org.zalando.problem.Status;
@@ -25,10 +31,7 @@ import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
 import javax.validation.Valid;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 
 
 @Service
@@ -70,12 +73,19 @@ public class VideoApiDelegateImpl implements VideoApiDelegate, FileApiDelegate
               .onFailure(throwable -> log.info("data of file exist problem , originalFileName = {}", videoData.getOriginalFilename(), throwable))
               .mapTry(bytes -> videoProcessingBusiness.saveVideoToFolder(fileDetailCreated.getNameFile(), bytes))
               .filter(Objects::nonNull)
-              .map(fileSaved -> videoProcessingBusiness.videoQualityReduction(fileSaved.getNameFile()))
+              .andThen(fileSaved -> videoProcessingBusiness.videoQualityReduction(fileSaved.getNameFile()))
           )
           .subscribeOn(Schedulers.boundedElastic()).subscribe();
         return resultFileSaved.add(resultFileDTO);
       }).subscribe();
     return ResponseEntity.status(200).contentType(MediaType.APPLICATION_JSON).body(resultFileSaved);
+  }
+
+  @CachePut
+  public File updateFile()
+  {
+
+    return null;
   }
 
 
@@ -102,10 +112,52 @@ public class VideoApiDelegateImpl implements VideoApiDelegate, FileApiDelegate
   {
     log.debug("videoName = {} , ranger = {}", videoName, range);
     return videoStreamingBusiness.getResourceRegion(videoName, range)
-      .apply((resourceRegion, fileType) -> ResponseEntity.status(HttpStatus.PARTIAL_CONTENT).header(fileType).body(resourceRegion));
+      .apply((resourceRegion, fileType) ->
+        ResponseEntity.status(HttpStatus.PARTIAL_CONTENT).contentType(MediaType.parseMediaType(fileType)).body(resourceRegion));
   }
 
 
 }
 
+@Log4j2
+@RestController
+class XX
+{
 
+  private final FileService fileService;
+  private final VideoStreamingBusiness videoStreamingBusiness;
+  private final VideoProcessingBusiness videoProcessingBusiness;
+
+  XX(FileService fileService, VideoStreamingBusiness videoStreamingBusiness, VideoProcessingBusiness videoProcessingBusiness)
+  {
+    this.fileService = fileService;
+    this.videoStreamingBusiness = videoStreamingBusiness;
+    this.videoProcessingBusiness = videoProcessingBusiness;
+  }
+
+  @PostMapping("/api/file/videos/froala/upload")
+  public ResponseEntity<Object> froalaUploadVideo(@RequestPart List<MultipartFile> videoDatas)
+  {
+
+    log.debug("Request to upload File : dataIsEmpty = {}", videoDatas.isEmpty());
+    SecurityUtils.checkAuthenticationAndAuthority(AuthoritiesConstants.MANAGEMENT);
+    var resultFileSaved = new HashMap<String, String>();
+    Flux.fromIterable(videoDatas)
+      .filter(Objects::nonNull)
+      .doOnNext(videoData ->
+      {
+        var resultFileDTO = fileService.createFileDetail(videoData);
+        Mono.just(resultFileDTO)
+          .map(fileDetailCreated ->
+            Try.of(videoData::getBytes)
+              .onFailure(throwable -> log.info("data of file exist problem , originalFileName = {}", videoData.getOriginalFilename(), throwable))
+              .map(bytes -> videoProcessingBusiness.saveVideoToFolder(fileDetailCreated.getNameFile(), bytes))
+              .filter(Objects::nonNull)
+              .andThen(fileSaved -> videoProcessingBusiness.videoQualityReduction(fileSaved.getNameFile()))
+          )
+          .subscribeOn(Schedulers.boundedElastic()).subscribe();
+        resultFileSaved.put("link", "/api/open/file/videos/stream/" + resultFileDTO.getNameFile());
+      }).subscribe();
+    return ResponseEntity.status(200).contentType(MediaType.APPLICATION_JSON).body(resultFileSaved);
+  }
+}
